--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,9 +1,14 @@
 
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+@import url("https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i");
+
+@import "~font-awesome/scss/font-awesome.scss";
 
 // Variables
-@import "variables";
-
+//@import "variables.scss";
+@import "style.scss";
 // Bootstrap
-@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+@import "bootstrap.css";
+
+@import "sb-admin-2.min.css";
+
