update style for dashboard

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,9 +6,26 @@
 
 // Variables
 //@import "variables.scss";
-@import "style.scss";
+//@import "style.css";
 // Bootstrap
-@import "bootstrap.css";
+//@import "bootstrap.css";
 
-@import "sb-admin-2.min.css";
 
+
+
+// Import Custom SB Admin 2 Mixins and Components
+//@import "mixins.scss";
+//@import "global.scss";
+//@import "utilities.scss";
+
+// Custom Components
+//@import "dropdowns.scss";
+//@import "navs.scss";
+//@import "buttons.scss";
+//@import "cards.scss";
+//@import "charts.scss";
+//@import "login.scss";
+//@import "error.scss";
+//@import "footer.scss";
+//
+//@import "sb-admin-2.scss";
